# markov-passgen

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  development-plan.md  development_log.txt  development_log_phase2.txt  development_log_phase3.txt  development_log_phase4.txt  development_log_phase5.txt  development_log_phase6.txt  development_log_phase7.txt  pyproject.toml  wordlist.txt
.github/workflows/: python-publish.yml
docs/: architecture.md  getting_started.md
examples/: README.md  common_passwords.txt  english_words.txt  usernames.txt
src/markov_passgen/: __init__.py  cli.py
src/markov_passgen/core/: __init__.py  corpus_loader.py  entropy_calculator.py  generator.py  multi_corpus_manager.py  ngram_builder.py
src/markov_passgen/filters/: __init__.py  base_filter.py  character_filter.py  filter_chain.py  length_filter.py
src/markov_passgen/transformers/: __init__.py  case_transformer.py  character_transformer.py  password_transformer.py  text_cleaner.py
src/markov_passgen/visualization/: __init__.py  visualizer.py
tests/e2e/: test_cli.py  test_cli_visualization.py
tests/integration/: test_phase2_integration.py  test_phase3_integration.py  test_phase4_integration.py  test_phase5_integration.py  test_phase6_integration.py
tests/unit/: test_corpus_loader.py  test_entropy_calculator.py  test_filters.py  test_generator.py  test_multi_corpus_manager.py  test_ngram_builder.py  test_password_transformer.py  test_text_cleaner.py  test_visualizer.py
